# shoes_store_bot

./: .dockerignore  .env.template  .gitignore  Dockerfile  config_reader.py  docker-compose.yml  file_for_test.py  main.py  pyproject.toml  requirements.txt
admin_bot/: Dockerfile  main.py
admin_bot/admin_callbacks/: callbacks.py
admin_bot/admin_images/: __init__.py  paths_to_img.py
admin_bot/callbacks/: __init__.py  callbacks.py
admin_bot/core/: config.py
admin_bot/fsm/: __init__.py  admin_states.py
admin_bot/handlers/: __init__.py  admin_handlers.py
admin_bot/images/: paths_to_img.py
admin_bot/middleware/: __init__.py  admin_middleware.py
admin_bot/phrases/: __init__.py  admin_menu.py
admin_bot/services/: __init__.py  admin_service.py  message_service.py
bot/: .env.template  Dockerfile  main.py
bot/callbacks/: __init__.py  callbacks.py
bot/core/: __init__.py  config_reader.py  service_factory.py
bot/fsm/: __init__.py  calculation_state.py  order_status_state.py
bot/handlers/: __init__.py  handlers.py
bot/images/: __init__.py  paths_to_img.py
bot/keyboards/: __init__.py
bot/menus/: __init__.py  clothes.py  main_menu.py  miscellaneous.py  order.py
bot/middlewares/: __init__.py  service_middleware.py
bot/phrases/: __init__.py  cache_key_and_ttl.py  miscellaneous.py  order.py
bot/repository/: __init__.py  cache_repo.py  google_sheets_repo.py
bot/services/: __init__.py  cache_service.py  command_hanlder.py  crossworld_service.py  data_update_service.py  (+3 more)
shared/: __init__.py  cache_initializer.py  shared_service_factory.py
(+13 files in other folders)
