[tool.poetry]
name = "crossworldbot"
version = "0.2.0"
description = "/"
authors = ["AleksgGin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.11.0"
pydantic-settings = "^2.4.0"
httplib2 = "^0.22.0"
apiclient = "^1.0.4"
oauth2client = "^4.1.3"
pygsheets = "^2.0.6"
redis = "^5.1.1"
apscheduler = "^3.10.4"
aiolimiter = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
